--- a/index.html
+++ b/index.html
@@ -4,14 +4,19 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-
-    <title>Nearest Color/title>
     <meta name="description" content="">
     <meta name="author" content="Henry Bulmer">
+
+    <title>Nearest Color</title>
+
+    <!-- C S S -->
+    <link href="styles/general.css" rel="stylesheet">
     
-    <script src="js/calculations/cielab.js"></script>
+    <!-- J S -->
+    <script src = "js\calculations\cielab.js"></script>
   </head>
 
   <body>
+    <div>Hello</div>
   </body>
 </html>
