--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
 
   <body>
     <div>
+      <h3>Input a Color</h3>
       <div>
         <span>R: <input data-bind="value: inputColor.R" /></span> 
         <span>G: <input data-bind="value: inputColor.G"/></span>
@@ -28,9 +29,28 @@
     </div>
 
     <div>
+      <h3>Comparison Colors</h3>
       <span data-bind="foreach: comparisonSet">
         <strong data-bind="text: Name"></strong>
       </span>
+    </div>
+
+    <div>
+      <h3>Add a Color to the Set</h3>
+      <div>
+        <span>R: <input data-bind="value: addColor().R" /></span> 
+        <span>G: <input data-bind="value: addColor().G"/></span>
+        <span>B: <input data-bind="value: addColor().B"/></span>
+        <span>Name: <input data-bind="value: addColor().Name"/></span>
+      </div>
+      <button data-bind="click: addColorToSet">Add Color</button>
+    </div>
+
+    <div>
+      <h3>The Closest Color is...</h3>
+      <div>
+        <strong data-bind="text: closestColor().Name"></strong>
+      </div>
     </div>
   </body>
 </html>
@@ -39,5 +59,5 @@
  <script src="node_modules\knockout\build\output\knockout-latest.js"></script>
 
 <!-- J S -->
-<script src = "js\app.js"></script>
 <script src = "js\calculations\cielab.js"></script>
+<script src = "js\app.js"></script>
