--- a/index.html
+++ b/index.html
@@ -59,5 +59,14 @@
  <script src="node_modules\knockout\build\output\knockout-latest.js"></script>
 
 <!-- J S -->
-<script src = "js\calculations\cielab.js"></script>
+<script src = "js\colorDefinitions\ObservableRgb.js"></script>
+<script src = "js\colorDefinitions\RgbColor.js"></script>
+
+<script src = "js\calculations\conversions\xyzConverter.js"></script>
+<script src = "js\calculations\conversions\labConverter.js"></script>
+<script src = "js\calculations\distanceCalculations\cieLabCalculator.js"></script>
+
+<script src = "js\calculations\nearestColorFinder.js"></script>
+
+<script src = "js\colorSetGenerator.js"></script>
 <script src = "js\app.js"></script>
