Getting bootstrap and mongo from cdns for gh-pages

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <title>Nearest Color</title>
 
     <!-- C S S -->
-    <link href="node_modules\bootstrap\dist\css\bootstrap.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <link href="styles/general.css" rel="stylesheet">
   </head>
 
@@ -95,7 +95,7 @@
 </html>
 
  <!-- E X T E R N A L  J S -->
- <script src="node_modules\knockout\build\output\knockout-latest.js"></script>
+ <script href="https://cdnjs.cloudflare.com/ajax/libs/knockout/3.5.0/knockout-debug.js"></script>
 
 <!-- J S -->
 <script src = "js\colorDefinitions\ObservableRgb.js"></script>
