Fixed typo in js link

--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
 </html>
 
  <!-- E X T E R N A L  J S -->
- <script href="https://cdnjs.cloudflare.com/ajax/libs/knockout/3.5.0/knockout-debug.js"></script>
+ <script src="https://cdnjs.cloudflare.com/ajax/libs/knockout/3.5.0/knockout-debug.js"></script>
 
 <!-- J S -->
 <script src = "js\colorDefinitions\ObservableRgb.js"></script>
